data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_265.wast
;; 6. **Test Description: Position `nop` within an infinite loop that contains a series of complex control instructions (`loop`, `if`, etc.).**    - **Reasoning**: Verify that `nop` is ignored and does not affect the control flow.    - **Check**: The loop should only follow the other control instructions without alteration.

(assert_invalid
  (module
    (func (loop 
      (nop)
      (if (i32.const 1)
        (then (br 1))
      )
    ))
  )
  "unreachable code"
)